--- a/styleMateriais.css
+++ b/styleMateriais.css
@@ -69,13 +69,78 @@ h1{
     border-bottom: #f4f4f4;
 }
 
-/*Estrela */
-.estrela{
+/*Card de ideias*/
+.ideias{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.card{
     width: 500px;
-    z-index: 2;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
-.preenchimento{
-    width: 85%;
-    background-color: orangered;
-    z-index: 1;
+
+.card-col{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: left;
 }
+
+.card-content{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.card-text{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.img-card{
+    padding: 0%;
+}
+
+/*Estrela */    
+.rating {
+    display: inline-block;
+  }
+  
+  .rating input {
+    display: none;
+  }
+  
+  .rating label {
+    float: right;
+    cursor: pointer;
+    color: #ccc;
+    transition: color 0.3s;
+  }
+  
+  .rating label:before {
+    content: '\2605';
+    font-size: 30px;
+  }
+  
+  .rating input:checked ~ label,
+  .rating label:hover,
+  .rating label:hover ~ label {
+    color: #ffc30f;
+    transition: color 0.3s;
+  }
+
+  .dificuldade{
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    background-color: green;
+  }
+  
