--- a/styleMateriais.css
+++ b/styleMateriais.css
@@ -14,6 +14,7 @@
 
 body{
     background-color: #f4f4f4;
+    height: 100vh;
 }
 
 h1{
@@ -112,35 +113,44 @@ h1{
 /*Estrela */    
 .rating {
     display: inline-block;
-  }
-  
-  .rating input {
+}
+
+.rating input {
     display: none;
-  }
-  
-  .rating label {
+}
+
+.rating label {
     float: right;
     cursor: pointer;
     color: #ccc;
     transition: color 0.3s;
-  }
-  
-  .rating label:before {
+}
+
+.rating label:before {
     content: '\2605';
     font-size: 30px;
-  }
-  
-  .rating input:checked ~ label,
-  .rating label:hover,
-  .rating label:hover ~ label {
+}
+
+.rating input:checked ~ label,
+.rating label:hover,
+.rating label:hover ~ label {
     color: #ffc30f;
     transition: color 0.3s;
-  }
+}
 
-  .dificuldade{
+.dificuldade{
     width: 15px;
     height: 15px;
     border-radius: 15px;
+}
+
+.dificuldade-facil{
     background-color: green;
-  }
+}
+.dificuldade-media{
+    background-color: #ffec15;
+}
+.dificuldade-facil{
+    background-color: red;
+}
   
