--- a/style-padrao.css
+++ b/style-padrao.css
@@ -38,6 +38,46 @@ h1{
     font-family: Circe, sans-serif;
 }
 
-.obrigatorio{
-    color: red;
+/*Estrela */    
+.rating {
+    display: inline-block;
+}
+
+.rating input {
+    display: none;
+}
+
+.rating label {
+    float: right;
+    cursor: pointer;
+    color: #ccc;
+    transition: color 0.3s;
+}
+
+.rating label:before {
+    content: '\2605';
+    font-size: 30px;
+}
+
+.rating input:checked ~ label,
+.rating label:hover,
+.rating label:hover ~ label {
+    color: #ffc30f;
+    transition: color 0.3s;
+}
+
+.dificuldade{
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+}
+
+.dificuldade-facil{
+    background-color: green;
+}
+.dificuldade-media{
+    background-color: #ffec15;
+}
+.dificuldade-dificil{
+    background-color: red;
 }
