--- a/style-padrao.css
+++ b/style-padrao.css
@@ -38,9 +38,60 @@ h1{
     font-family: Circe, sans-serif;
 }
 
-/*Estrela */    
+/*Card de ideias*/
+.ideias{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.card{
+    width: 500px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.card-col{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: left;
+}
+
+.card-content{
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.card-text{
+    width: 80%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.img-card{
+    padding: 5px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
+
+.img-card-ideia{
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+}
+
+/*Estrela e dificuldade*/    
 .rating {
-    display: inline-block;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row-reverse;
+    width: 100%;
 }
 
 .rating input {
@@ -59,17 +110,28 @@ h1{
     font-size: 30px;
 }
 
-.rating input:checked ~ label,
+/* .rating input:checked ~ label,
 .rating label:hover,
 .rating label:hover ~ label {
     color: #ffc30f;
     transition: color 0.3s;
+} */
+
+.rating input:checked ~ label{
+    color: #ffc03f;
+}
+
+.alinha-estrela{
+    display: flex;
+    justify-content: end;
 }
 
 .dificuldade{
     width: 15px;
     height: 15px;
     border-radius: 15px;
+    display: flex;
+    justify-content: center;
 }
 
 .dificuldade-facil{
@@ -80,4 +142,72 @@ h1{
 }
 .dificuldade-dificil{
     background-color: red;
+}
+
+.row-av-ideia{
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    width: 100%;
+}
+
+/* Postar nova ideia */
+.novaIdeia{
+    text-align: center;
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center; 
+    width: 50%;
+    color: black;
+    font-size: 16px;
+}
+
+#search2:focus {
+    box-shadow: 0 0 0 0;
+    border: 0 none;
+    outline: 0;
+}
+
+.button{
+    cursor: pointer;
+    position: relative;
+    padding: 10px 24px;
+    font-size: 16px;
+    color: black;
+    background-color: #4E9E5A;
+    border: 2px solid #7AC143;
+    border-radius: 34px;
+    background-color: transparent;
+    font-weight: 600;
+    transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+    overflow: hidden;
+}
+
+.button::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    width: 70px;
+    height: 70px;
+    border-radius: inherit;
+    scale: 0;
+    z-index: -1;
+    background-color: #7AC143;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.button:hover::before {
+    scale: 3;
+}
+
+.button:hover {
+    color: #212121;
+    scale: 1.1;
+    box-shadow: 0 0px 20px rgba(193, 163, 98,0.4);
+}
+
+.button:active {
+    scale: 1;
 }
