pagIdeia -> Problema das estrelas resolvido. Pendências no painel inicial

--- a/style-ideia.css
+++ b/style-ideia.css
@@ -82,3 +82,12 @@
     flex-direction: row;
     width: 100%;
 }
+
+/* Botão ver mais */
+.button{
+    background-color: #05440f;
+}
+
+.button::before{
+    background-color: #05440f;
+}
