--- a/style-ideia.css
+++ b/style-ideia.css
@@ -21,7 +21,7 @@
 .avaliacao{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 
 .dif{
