--- a/style-padrao.css
+++ b/style-padrao.css
@@ -27,6 +27,11 @@ a{
     color: black;
 }
 
+a:hover{
+    text-decoration: none;
+    color: black;
+}
+
 .center{
     display: flex;
     justify-content: center;
@@ -80,7 +85,7 @@ a{
 }
 
 .img-card{
-    padding: 2px;
+    padding: 3px;
 }
 
 .img-card-ideia{
@@ -103,7 +108,7 @@ a{
 
 .rating label {
     float: right;
-    cursor: pointer;
+    /* cursor: pointer; */
     color: #ccc;
     transition: color 0.3s;
 }
@@ -127,6 +132,10 @@ a{
 .alinha-estrela{
     display: flex;
     justify-content: end;
+}
+
+.alinha-estrela .row>*{
+    width: min-content;
 }
 
 .dificuldade{
