--- a/style-ideia.css
+++ b/style-ideia.css
@@ -15,6 +15,7 @@
     font-size: 18px;
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
 }
 
@@ -55,6 +56,61 @@
 
 }
 
+#numCurtidas{
+    font-size: 14px;
+}
+
+.btnInteraction{
+    cursor: pointer;
+    width: 24px;
+    transition: width 0.3s;
+}
+
+.btnInteraction:hover{
+    width: 28px;
+}
+
+
+
+
+/*Estrela e dificuldade*/    
+.rating-x {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+}
+
+.rating-x input {
+    display: none;
+}
+
+.rating-x label {
+    float: right;
+    cursor: pointer;
+    color: #ccc;
+    transition: color 0.3s;
+}
+
+.rating-x label:before {
+    content: '\2605';
+    font-size: 30px;
+}
+
+.rating-x input:checked ~ label,
+.rating-x label:hover,
+.rating-x label:hover ~ label {
+    color: #ffc30f;
+    transition: color 0.3s;
+}
+
+.rating-x input:checked ~ label{
+    color: #ffc03f;
+}
+
+/* Curtida */
+
+
 /* Descrição */
 .descricoes{
     display: flex;
@@ -70,6 +126,11 @@
     font-size: 18px;
     display: flexbox;
     align-items: center;
+}
+
+.img-topico{
+    width: 24px;
+    height: 24px;
 }
 
 .sec-desc{
