--- a/style-padrao.css
+++ b/style-padrao.css
@@ -131,11 +131,7 @@ a:hover{
 
 .alinha-estrela{
     display: flex;
-    justify-content: end;
-}
-
-.alinha-estrela .row>*{
-    width: min-content;
+    justify-content: flex-start;
 }
 
 .dificuldade{
