--- a/style-ideia.css
+++ b/style-ideia.css
@@ -108,9 +108,6 @@
     color: #ffc03f;
 }
 
-/* Curtida */
-
-
 /* Descrição */
 .descricoes{
     display: flex;
@@ -149,4 +146,28 @@
     font-size: 14px;
     flex-direction: row;
     width: 100%;
+}
+
+@media screen and (max-width: 310px){
+    .rating label::before{
+        font-size: 25px;
+    }
+    .rating-x label::before{
+        font-size: 25px;
+    }
+    .dificuldade-facil{
+        height: 12px;
+        width: 12px;
+    }
+    .dificuldade-media{
+        height: 12px;
+        width: 12px;
+    }
+    .dificuldade-dificil{
+        height: 12px;
+        width: 12px;
+    }
+    .topico{
+        font-size: 16px;
+    }
 }
