perfil.php -> Aplicação da função "ver mais" em andamento

--- a/style-padrao.css
+++ b/style-padrao.css
@@ -38,6 +38,13 @@ a:hover{
     align-items: center;
 }
 
+.center2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 #navbarMargin{
     margin-top: 90px;
 }
