--- a/style-padrao.css
+++ b/style-padrao.css
@@ -200,8 +200,7 @@ a:hover{
     padding: 10px 24px;
     font-size: 16px;
     color: black;
-    background-color: #4E9E5A;
-    border: 2px solid #7AC143;
+    border: 2px solid #409d4e;
     border-radius: 34px;
     background-color: transparent;
     font-weight: 600;
@@ -219,7 +218,7 @@ a:hover{
     border-radius: inherit;
     scale: 0;
     z-index: -1;
-    background-color: #7AC143;
+    background-color: #409d4e;
     transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
@@ -228,7 +227,7 @@ a:hover{
 }
 
 .button:hover {
-    color: #212121;
+    color: #f4f4f4;
     scale: 1.1;
     box-shadow: 0 0px 20px rgba(193, 163, 98,0.4);
 }
