--- a/style-conta.css
+++ b/style-conta.css
@@ -167,6 +167,78 @@
     flex-direction: column;
 }
 
+/* Avaliação */
+input[type='radio'] + label{
+    cursor: auto;
+}
+
+/*Modal */
+
+.w-100{
+    width: 100%;
+}
+
+.center4{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.modal-body > form{
+    padding-left: 20%;
+    padding-right: 20%;
+    width: 100%;
+}
+
+.footer{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    gap: 20%;
+}
+
+#ft{
+    width: 128px;
+}
+
+.form-label{
+    font-size: 16px;
+}
+
+@media screen and (min-width: 250px) and (max-width: 380px) {
+
+    .modal-body > form{
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        gap: 1%;
+    }
+}
+
+@media screen and (min-width: 381px) and (max-width: 575px) {
+
+    .modal-body > form{
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+
+    .footer{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        gap: 10%;
+    }
+}
+
+
 /* Media Query */
 @media screen and (min-width: 240px) and (max-width: 312px) {
     .txt-c{
