--- a/style-padrao.css
+++ b/style-padrao.css
@@ -206,6 +206,8 @@ a:hover{
     font-weight: 600;
     transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
     overflow: hidden;
+    display: flex;
+    align-items: center;
 }
 
 .button::before {
